# mariner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: create_metadata_duckdb_db.R  create_metadata_sqlite_db.R  scripts.Rproj
src/: app.py  utils.py
tests/: test_sample.py  test_utils.py
